# spotify-api-qml

./: CMakeLists.txt  LICENSE  README.md
Spotify/: CMakeLists.txt  authorization.cpp  authorization.h  likedsongs.cpp  likedsongs.h  main.cpp  playlist.cpp  playlist.h  spotify-api.cpp  spotify-api.h
Spotify/test/: CMakeLists.txt  main.cpp  main.qml
